<resources>
    <string name="app_name" translatable="false">DoxeApp</string>
    <string name="showSim">Show SIM</string>
    <string name="showWifi">Show WiFi</string>
    <string name="wifiTitleDefault">Wifi Default</string>
    <string name="getWifiData">Get WiFi Data</string>
    <string name="ssidRes">"SSID: "</string>
    <string name="bssidRes">"BSSID: "</string>
    <string name="frecRes">"Frequency: "</string>
    <string name="strengthRes">"WiFi Strength: "</string>
    <string name="speedRes">"WiFi Speed: "</string>
    <string name="ipRes">"IP: "</string>
    <string name="hiddenRes">"Hidden ?: "</string>
    <string name="gateRes">"Gateway: "</string>
    <string name="maskRes">"Netmask: "</string>
    <string name="infoUnavailable">No connection / info unavailable</string>
    <string name="simtitle">SIM</string>
    <string name="simSerialNumer">SIM Serial Number:</string>
    <string name="simImsi">SIM IMSI:</string>
    <string name="simOperador">"Operator Name: "</string>
    <string name="simRed">"Network Type: "</string>
    <string name="simImei">SIM IMEI:</string>
    <string name="getSimData">Get SIM Data</string>
    <string name="simState">"State: "</string>
    <string name="simCountryISO">"SIM Country ISO: "</string>
    <string name="networkCountryIso">Network Country ISO:</string>
    <string name="multiSim">"Multi SIM: "</string>
    <string name="networkOperator">"Network Operator: "</string>
    <string name="simFid">"FID: "</string>
</resources>