<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/textViewWifiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/wifiTitleDefault"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSSID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ssidRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewBSSID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bssidRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewFrec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frecRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewStrength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strengthRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speedRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ipRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewGateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gateRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maskRes"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewHidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hiddenRes"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonGetWifiData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/getWifiData" />

</LinearLayout>