<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/textViewSIMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simtitle"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/simState"
        android:textSize="16sp" />

<!--    <TextView-->
<!--        android:id="@+id/textViewIccid"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/simSerialNumer"-->
<!--        android:textSize="16sp" />-->

    <TextView
        android:id="@+id/textViewOperador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/networkOperator"
        android:textSize="16sp" />

<!--    <TextView-->
<!--        android:id="@+id/textViewImsi"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/simImsi"-->
<!--        android:textSize="16sp" />-->

    <TextView
        android:id="@+id/textViewOperatorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/simOperador" />

    <TextView
        android:id="@+id/textViewNetwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simRed"
        android:textSize="16sp" />

<!--    <TextView-->
<!--        android:id="@+id/textViewImei"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/simImei"-->
<!--        android:textSize="16sp" />-->

    <TextView
        android:id="@+id/textViewSimCountryIso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/simCountryISO" />

    <TextView
        android:id="@+id/textViewNetworkCountryIso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/networkCountryIso" />

    <TextView
        android:id="@+id/textViewMultiSim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiSim"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewFid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/simFid" />

    <Button
        android:id="@+id/buttonGetSimData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/getSimData" />
</LinearLayout>